# aiosnow

./: .editorconfig  .gitignore  .travis.yml  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Makefile  README.md  fetch_parallel.py  main.py  many.py  pyproject.toml  pytest.ini  test.py
.github/: FUNDING.yml
aiosnow/: __init__.py  app.py  client.py  config.py  consts.py  exceptions.py  session.py  utils.py
aiosnow/model/: base.py
aiosnow/model/schema/: base.py
aiosnow/models/: __init__.py
aiosnow/models/_base/: __init__.py  model.py  table.py
aiosnow/models/_schema/: __init__.py  schema.py
aiosnow/models/attachment/: __init__.py  file.py  model.py  schema.py  utils.py
aiosnow/models/common/: __init__.py  base.py
aiosnow/query/: __init__.py  builder.py  condition.py  operators.py  selector.py  utils.py
aiosnow/request/: base.py  delete.py  get.py  patch.py  post.py
devtools/: README.md
docs/: Makefile  conf.py  essentials.rst  examples.rst  funding.rst  index.rst  make_docs.sh  requirements.txt
docs/_static/: custom.css
docs/examples/: app.rst  full.rst
docs/other/: config.rst  funding.rst
docs/reference/: client.rst  condition.rst  exceptions.rst  fields.rst  resource.rst  response.rst  schemas.rst  snow.rst
docs/samples/: app.rst
docs/schemas/: index.rst
docs/usage/: connect.rst
examples/: README.md  create-update-delete.py  run.py
examples/delete/: by_number.py  by_sysid.py
examples/read/: nested.py  one.py  selective.py  stream.py
examples/table/: create.py
snow/: __init__.py  app.py  config.py  consts.py  exceptions.py  response.py  schemas.py  session.py  utils.py
snow/model/: __init__.py  base.py  table.py
snow/query/: builder.py  utils.py
snow/request/: __init__.py  base.py  delete.py  get.py  methods.py  patch.py  post.py
snow/resource/: __init__.py  schema.py
snow/response/: __init__.py
snow/schemas/: __init__.py
snowstorm/: __init__.py  consts.py  exceptions.py  model.py  request.py  response.py  schemas.py  selector.py  stream.py
snowstorm/query/: __init__.py  builder.py  finder.py  operators.py  parser.py  segment.py  stream.py
snowstorm/request/: __init__.py  create.py  read.py  selector.py  stream.py  update.py
snowstorm/resource/: __init__.py  query.py  schema.py
snowstorm/response/: __init__.py  consts.py
tests/: conftest.py  query.py  test_client.py  test_query.py
tests/app/: test_app_resource_schema.py  test_app_session_input.py
tests/client/: test_app_session_input.py  test_client_session_input.py
tests/fields/: test_fields_boolean.py  test_fields_datetime.py  test_fields_integer.py  test_fields_string.py
tests/model/: test_model_attachment.py  test_model_schema.py  test_model_table.py
tests/request/: test_request_base.py  test_request_delete.py  test_request_get.py  test_request_patch.py  test_request_post.py
tests/resource/: test_resource_delete.py
(+256 files in other folders)
