[tool.poetry]
name = "snow"
version = "0.2.2"
description = "Python library for ServiceNow"
authors = ["Robert Wikman <rbw@vault13.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rbw/snow"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"
marshmallow = "^3.2.2"
ujson = "^1.35"

[tool.poetry.dev-dependencies]
twine = "^1.13"
sphinx = "^2.1.1"
sphinxcontrib-napoleon = "^0.7"
pytest = "^4.4.0"
pytest-cov = "^2.7.1"
autoflake = "^1.3"
codecov = "^2.0.15"
docutils = { version = "0.15" }
black = { version = "^19.3b0", allow-prereleases = true }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
